tempfile/derive_more/tests/compile_fail/as_mut/skip_and_others.rs
#[derive(derive_more::AsMut)]
struct Foo {
    #[as_mut]
    bar: i32,
    #[as_mut(ignore)]
    baz: f32,
}

fn main() {}
